[metadata]
author = Danilo Horta
author_email = danilo.horta@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
description = EBI cluster monitor
download_url = https://github.com/organisation/cmonit/releases/latest
keywords = ebi, cluster, monitor
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=ASCII
maintainer = Danilo Horta
maintainer_email = danilo.horta@gmail.com
name = cmonit
platforms = 
url = https://github.com/organisation/cmonit
version = attr: cmonit.__version__

[options]
zip_safe = True
include_package_data = True
packages = find:
